--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 on:
@@ -13,14 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: gradle:6-jdk11
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Run build shell script
+        run: ci/build-app.sh
