--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
       - name: Run build shell script
         run: ci/build-app.sh
+      
+      - name: Test
+        run: ci/unit-test-app.sh
