--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,24 @@ on:
   workflow_dispatch:
 
 jobs:
+  #snyk:
+  #  runs-on: ubuntu-latest
+  #  container: gradle:6-jdk11
+#
+  #  steps:
+  #    - name: Checkout code
+  #      uses: actions/checkout@v4
+#
+  #    - name: Snyk Scan
+  #      uses: snyk/actions/scan@master
+  #      with:
+  #        token: ${{ secrets.SNYK_TOKEN }}
+#
+  #    - name: Snyk Gradle Scan
+  #      uses: snyk/actions/gradle@master
+  #      with:
+  #        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
   build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
@@ -16,12 +34,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Run build shell script
         run: ci/build-app.sh
-      
-      - name: Test
-        run: ci/unit-test-app.sh
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -30,8 +45,8 @@ jobs:
           path: .
 
   lint:
+    needs: [ build ]
     runs-on: ubuntu-latest
-    needs: [build]
 
     steps:
       - name: Download code
@@ -39,9 +54,41 @@ jobs:
         with:
           name: code
           path: .
-    
+
       - name: Run linting
         uses: super-linter/super-linter/slim@v5
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  test:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download code
+        uses: actions/download-artifact@v4
+        with:
+          name: code
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Tests
+        run: ci/unit-test-app.sh
+
+
+  sonar-cloud:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download code
+        uses: actions/download-artifact@v4
+        with:
+          name: code
+
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
