--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,6 @@
-FROM adoptopenjdk/openjdk11-openj9:alpine-slim
-LABEL author="Sofus Albertsen"
-COPY build/libs/app-*-all.jar app.jar
+FROM amazoncorretto:21
+LABEL author="Filip Filchev"
+WORKDIR .
+COPY libs/*.jar app.jar
 EXPOSE 8000
-CMD java -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
+CMD ["java", "-Dcom.sun.management.jmxremote", "-noverify", "${JAVA_OPTS}", "-jar", "app.jar"]
