--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "application"
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id "org.sonarqube" version "5.1.0.4882"
-    id "net.ltgt.apt-eclipse" version "0.21"
-    id "com.github.johnrengelman.shadow" version "5.0.0"
 }
 
 version "0.1"
@@ -57,9 +56,19 @@ shadowJar {
 run.classpath += configurations.developmentOnly
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 
+tasks.withType(JavaCompile) {
+    options.compilerArgumentProviders.each { provider ->
+        if (provider.name == 'apt$0') {
+            inputs.property("compilerArgumentProviders.apt\$0.name", provider.name).with {
+                annotations = ["@Input"]
+            }
+        }
+    }
+}
+
 sonar {
     properties {
-        property "sonar.projectKey", "RoronoaFilip_github-actions-katas"
+        property "sonar.projectKey", "github-actions-katas"
         property "sonar.organization", "roronoafilip"
         property "sonar.host.url", "https://sonarcloud.io"
     }
